--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<hTML>
-    <body>
-    <h1> Headline1 </h1>
-    <h2> Headline1 </h2>     
-    <h3> Headline1 </h3> 
-    <h4> Headline1 </h4> 
-    <h5> Headline1 </h5> 
-    <p> This is a Paragraph</p>
-    <p> This is a second Paragraph</p>
-    <br/>
-    <p> This is a third Paragraph</p>
-    </body>
-</hTML>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+
+    <p class="para-sf" id="black-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus blanditiis amet necessitatibus eligendi unde alias hic quod excepturi ipsum dicta consectetur ipsam, iure dolor, earum minima. Quos assumenda delectus molestias.\</p>
+    <!-- <p style="font-style: italic;">Hello Jee, Kaise ho sab</p> -->
+<!-- 
+    <p>Let's apply internal CSS on this</p> -->
+</body>
+</html>
